[gd_scene load_steps=5 format=3 uid="uid://c5yv6yqy3a04d"]

[ext_resource type="Script" uid="uid://dx2gdns28pus" path="res://Scripts/dungeon.gd" id="1_oavya"]
[ext_resource type="Texture2D" uid="uid://7y8ksyjnrs62" path="res://assets/icons/function_icon_list_2.png" id="2_dakn4"]
[ext_resource type="Texture2D" uid="uid://d3v1olhditjay" path="res://assets/icons/function_icon_home_3.png" id="2_lt7kh"]

[sub_resource type="Theme" id="Theme_gwsu0"]

[node name="Dungeon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oavya")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Header_Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel"]
layout_mode = 2

[node name="button_cont_margin2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="button_return_home" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer/button_cont_margin2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme = SubResource("Theme_gwsu0")
theme_override_font_sizes/font_size = 24
icon = ExtResource("2_lt7kh")
expand_icon = true

[node name="title_container" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Title Text here"
horizontal_alignment = 1

[node name="button_cont_margin" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="button_main_menu" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer/button_cont_margin"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme = SubResource("Theme_gwsu0")
icon = ExtResource("2_dakn4")
icon_alignment = 1
expand_icon = true

[node name="Dungeon_Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Dungeon_Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Dungeon_Panel/MarginContainer"]
layout_mode = 2
columns = 6

[node name="Stats_Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="coin_pouch_label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4000"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="item_count_label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "9/100"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="day_label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Stats_Panel/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Moves: 0/12"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Bottom_Panel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Message" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="message_label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/Message"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 2

[node name="SubMessage" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="sub_message_label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/SubMessage"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="button_continue" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/ContinueButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continue Exploring"

[node name="ExitButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="button_exit" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/ExitButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Leave Dungeon"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="event_img" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 100.0
offset_right = 1.0
offset_bottom = -743.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.239216, 0.545098, 0.603922)

[node name="event_icon" type="TextureRect" parent="CanvasLayer/event_img"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer/button_cont_margin2/button_return_home" to="." method="_on_button_return_home_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Header_Panel/HBoxContainer/button_cont_margin/button_main_menu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/ContinueButton/button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer2/Bottom_Panel/ExitButton/button_exit" to="." method="_on_button_exit_pressed"]
